Teamspeak Terraform provider foundation
