# openapi/golib/model_channel_info_response_body.go
@@ -1,0 +1,17 @@
+/*
+ * Teamspeak
+ *
+ * Teamspeak WebQuery
+ *
+ * API version: 3.12.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package teamspeak
+// ChannelInfoResponseBody struct for ChannelInfoResponseBody
+type ChannelInfoResponseBody struct {
+	ChannelName string `json:"channel_name,omitempty"`
+	ChannelTopic string `json:"channel_topic,omitempty"`
+	ChannelDescription string `json:"channel_description,omitempty"`
+	ChannelFlagPermanent string `json:"channel_flag_permanent,omitempty"`
+}
