# openapi/golib/model_inline_response_200_body.go
@@ -1,17 +1,0 @@
-/*
- * Teamspeak
- *
- * Teamspeak WebQuery
- *
- * API version: 3.12.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-// InlineResponse200Body struct for InlineResponse200Body
-type InlineResponse200Body struct {
-	ChannelName string `json:"channel_name,omitempty"`
-	ChannelNeededSubscribePower string `json:"channel_needed_subscribe_power,omitempty"`
-	ChannelOrder string `json:"channel_order,omitempty"`
-	Cid string `json:"cid,omitempty"`
-}
